add rpc update/create push-token for push noti
